pgadmin4/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin4-deployment
  labels:
    app: pgadmin4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin4
  template:
    metadata:
      labels:
        app: pgadmin4
    spec:
      containers:
      - name: pgadmin4
        image: dpage/pgadmin4:latest
        ports:
        - containerPort: 80
          name: pgadmin4
        volumeMounts:
        - name: pv-pgadmin4
          mountPath: /var/lib/pgadmin
      volumes:
      - name: pv-pgadmin4
        persistentVolumeClaim:
          claimName: pgadmin4-pv-claim
