pgadmin4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4-service
  labels:
    app: pgadmin4
spec:
  ports:
  - port: 80
    name: pgadmin4
  selector:
    app: pgadmin4
