pgadmin4/ingress-pgadmin4.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin4-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pgadmin4.manueldevops.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pgadmin4-service
            port:
              number: 80
